--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </div>
           <h3>Tata Bahasa</h3>
           <p>Tingkatkan pemahaman tentang tata bahasa jepang dengan pelatihan soal-soal</p>
-          <a href="test.html" class="btn">Mulai Belajar</a>
+          <a href="menutatabahasa.html" class="btn">Mulai Belajar</a>
         </div>
       </div>
     
