--- a/menutatabahasa.html
+++ b/menutatabahasa.html
@@ -204,10 +204,9 @@
     <div class="illustration">
       <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg">
         <rect x="50" y="50" width="200" height="120" rx="10" fill="#f8f9fa" stroke="#007bff" stroke-width="2"/>
-        <text x="150" y="90" text-anchor="middle" font-family="Arial" font-size="24" fill="#333">あいうえお</text>
-        <text x="150" y="120" text-anchor="middle" font-family="Arial" font-size="24" fill="#333">かきくけこ</text>
-        <text x="150" y="150" text-anchor="middle" font-family="Arial" font-size="24" fill="#333">さしすせそ</text>
-        <text x="150" y="40" text-anchor="middle" font-family="Arial" font-size="16" fill="#333">ひらがな (Hiragana)</text>
+        <text x="150" y="90" text-anchor="middle" font-family="Arial" font-size="24" fill="#333">Tata</text>
+        <text x="150" y="120" text-anchor="middle" font-family="Arial" font-size="24" fill="#333">Bahasa</text>
+        <text x="150" y="150" text-anchor="middle" font-family="Arial" font-size="24" fill="#333">Jepang</text>
       </svg>
     </div>
 
