--- a/kotoba.html
+++ b/kotoba.html
@@ -567,6 +567,27 @@
       ["ふしみ", "nama kota di kyoto"],
       ["こうしえん", "nama kota dekat osaka"],
       ["おおさかじょう", "benteng osaka"],
+      ["たべます", "makan"],
+      ["のみます", "minum"],
+      ["すいます", "merokok"],
+      ["みます", "melihat"],
+      ["ききます", "mendengar"],
+      ["よみます", "membaca"],
+      ["かきます", "menulis/gambar/lukis"],
+      ["かいます", "membeli"],
+      ["とります", "mengambil(foto)"],
+      ["します", "mengerjakan"],
+      ["あいます", "bertemu"],
+      ["ごはん", "nasi/makan"],
+      ["あさごはん", "sarapan"],
+      ["ひるごはん", "makan siang"],
+      ["ばんごはん", "makan malam"],
+      ["パン", "roti"],
+      ["たまご", "telur"],
+      ["にく", "daging"],
+      ["さかな", "ikan"],
+      ["やさい", "sayuran"],
+      ["くだもの", "buah-buahan"],
     ];
 
     let questions = [];
