--- a/katasifat.html
+++ b/katasifat.html
@@ -347,24 +347,24 @@
       ["よわい", "lemah"],
       ["たかい", "tinggi,mahal"],
       ["ひくい", "rendah"],
+      ["あつい", "panas(mkn,minm dll)"],
+      ["つめたい", "dingin(mkn,minm dll)"],
+      ["あたたかい", "hangat(mkn,minm dll)"],
+      ["ぬるい", "kurang panas(air)"],
+      ["まるい", "bundar,bulat"],
+      ["あまい", "manis"],
+      ["からい", "pedas"],
+      ["すっぱい", "asam"],
+      ["しおからい", "asin"],
+      ["にがい", "pahit"],
+      ["こい", "pekat"],
+      ["うすい", "tipis,encer(rasa)"],
+      ["おいしい", "enak"],
+      ["まずい", "tidak enak"],
+      ["あつい", "panas(suhu)"],
+      ["さむい", "dingin(suhu)"],
+      ["あたたかい", "hangat(suhu)"],
       ["SAMPAI", "SINI"],
-      ["はい", "ya"],
-      ["いいえ", "tidak"],
-      ["おねがいします", "tolong"],
-      ["どういたしまして", "sama-sama"],
-      ["わたし", "saya"],
-      ["あなた", "kamu"],
-      ["かれ", "dia"],
-      ["かのじょ", "dia"],
-      ["ともだち", "teman"],
-      ["せんせい", "guru"],
-      ["がくせい", "murid"],
-      ["ちち", "ayah"],
-      ["はは", "ibu"],
-      ["あに", "kakak"],
-      ["あね", "kakak"],
-      ["おとうと", "adik"],
-      ["いもうと", "adik"],
       ["おじいさん", "kakek"],
       ["おばあさん", "nenek"],
       ["いち", "satu"],
