--- a/katasifat.html
+++ b/katasifat.html
@@ -320,292 +320,163 @@
 
   <script>
     const data = [
-      ["おおきい", "besar"],
-      ["ちいさい", "kecil"],
-      ["ながい", "panjang"],
-      ["みじかい", "pendek"],
-      ["おおい", "banyak"],
-      ["すくない", "sedikit"],
-      ["ふとい", "gemuk,tebal"],
-      ["ほそい", "ramping,tipis"],
-      ["あつい", "tebal"],
-      ["うすい", "tipis"],
-      ["かたい", "keras"],
-      ["やわらかい", "lunak"],
-      ["こまかい", "kecil(uang)"],
-      ["あらい", "kasar"],
-      ["あたらしい", "baru"],
-      ["ふるい", "lama,tua"],
-      ["たかい", "mahal"],
-      ["やすい", "murah"],
-      ["はやい", "cepat(waktu)"],
-      ["はやい", "cepat(kelajuan)"],
-      ["おそい", "lambat"],
-      ["とおい", "jauh"],
-      ["ちかい", "dekat"],
-      ["つよい", "kuat"],
-      ["よわい", "lemah"],
-      ["たかい", "tinggi,mahal"],
-      ["ひくい", "rendah"],
-      ["あつい", "panas(mkn,minm dll)"],
-      ["つめたい", "dingin(mkn,minm dll)"],
-      ["あたたかい", "hangat(mkn,minm dll)"],
-      ["ぬるい", "kurang panas(air)"],
-      ["まるい", "bundar,bulat"],
-      ["あまい", "manis"],
-      ["からい", "pedas"],
-      ["すっぱい", "asam"],
-      ["しおからい", "asin"],
-      ["にがい", "pahit"],
-      ["こい", "pekat"],
-      ["うすい", "tipis,encer(rasa)"],
-      ["おいしい", "enak"],
-      ["まずい", "tidak enak"],
-      ["あつい", "panas(suhu)"],
-      ["さむい", "dingin(suhu)"],
-      ["あたたかい", "hangat(suhu)"],
-      ["SAMPAI", "SINI"],
-      ["おじいさん", "kakek"],
-      ["おばあさん", "nenek"],
-      ["いち", "satu"],
-      ["に", "dua"],
-      ["さん", "tiga"],
-      ["よん", "empat"],
-      ["ご", "lima"],
-      ["ろく", "enam"],
-      ["なな", "tujuh"],
-      ["はち", "delapan"],
-      ["きゅう", "sembilan"],
-      ["じゅう", "sepuluh"],
-      ["ひゃく", "seratus"],
-      ["せん", "seribu"],
-      ["まん", "sepuluh ribu"],
-      ["いま", "sekarang"],
-      ["きょう", "hari ini"],
-      ["きのう", "kemarin"],
-      ["ひる", "siang"],
-      ["よる", "malam"],
-      ["しゅうまつ", "akhir pekan"],
-      ["じ", "jam"],
-      ["ふん", "menit"],
-      ["とき", "waktu"],
-      ["なんじ", "jam berapa"],
-      ["がっこう", "sekolah"],
-      ["だいがく", "universitas"],
-      ["いえ", "rumah"],
-      ["へや", "kamar"],
-      ["としょかん", "perpustakaan"],
-      ["えき", "stasiun"],
-      ["みせ", "toko"],
-      ["ぎんこう", "bank"],
-      ["びょういん", "rumah sakit"],
-      ["レストラン", "restoran"],
-      ["コンビニ", "minimarket"],
-      ["こうえん", "taman"],
-      ["まち", "kota"],
-      ["くに", "negara"],
-      ["みち", "jalan"],
-      ["ほん", "buku"],
-      ["ざっし", "majalah"],
-      ["しんぶん", "koran"],
-      ["ノート", "buku catatan"],
-      ["えんぴつ", "pensil"],
-      ["ペン", "pulpen"],
-      ["スマホ", "HP"],
-      ["コンピューター", "komputer"],
-      ["つくえ", "meja"],
-      ["いす", "kursi"],
-      ["くるま", "mobil"],
-      ["じてんしゃ", "sepeda"],
-      ["でんしゃ", "kereta"],
-      ["ひこうき", "pesawat"],
-      ["ふね", "kapal"],
-      ["かばん", "tas"],
-      ["くつ", "sepatu"],
-      ["シャツ", "kemeja"],
-      ["ズボン", "celana"],
-      ["ドア", "pintu"],
-      ["まど", "jendela"],
-      ["ごはん", "nasi"],
-      ["パン", "roti"],
-      ["にく", "daging"],
-      ["さかな", "ikan"],
-      ["やさい", "sayur"],
-      ["くだもの", "buah"],
-      ["りんご", "apel"],
-      ["バナナ", "pisang"],
-      ["みかん", "jeruk"],
-      ["みず", "air"],
-      ["おちゃ", "teh"],
-      ["こうちゃ", "teh hitam"],
-      ["コーヒー", "kopi"],
-      ["ジュース", "jus"],
-      ["ぎゅうにゅう", "susu"],
-      ["いきます", "pergi"],
-      ["きます", "datang"],
-      ["かえります", "pulang"],
-      ["たべます", "makan"],
-      ["のみます", "minum"],
-      ["みます", "melihat"],
-      ["ききます", "mendengar"],
-      ["よみます", "membaca"],
-      ["かきます", "menulis"],
-      ["べんきょうします", "belajar"],
-      ["はなします", "berbicara"],
-      ["あいます", "bertemu"],
-      ["ねます", "tidur"],
-      ["おきます", "bangun"],
-      ["かいます", "membeli"],
-      ["つかいます", "menggunakan"],
-      ["あります", "ada"],
-      ["います", "ada"],
-      ["します", "melakukan"],
-      ["いい", "baik"],
-      ["わるい", "buruk"],
-      ["おおきい", "besar"],
-      ["ちいさい", "kecil"],
-      ["たかい", "tinggi"],
-      ["やすい", "murah"],
-      ["あたらしい", "baru"],
-      ["ふるい", "lama"],
-      ["いそがしい", "sibuk"],
-      ["ひま", "senggang"],
-      ["たのしい", "menyenangkan"],
-      ["おいしい", "enak"],
-      ["あつい", "panas"],
-      ["さむい", "dingin"],
-      ["しろい", "putih"],
-      ["くろい", "hitam"],
-      ["なに", "apa"],
-      ["どこ", "di mana"],
-      ["だれ", "siapa"],
-      ["いつ", "kapan"],
-      ["なんにち", "tanggal berapa"],
-      ["いくつ", "berapa"],
-      ["なんさい", "umur berapa"],
-      ["どうして", "kenapa"],
-      ["どう", "bagaimana"],
-      ["とても", "sangat"],
-      ["すこし", "sedikit"],
-      ["たくさん", "banyak"],
-      ["そして", "lalu"],
-      ["でも", "tetapi"],
-      ["から", "karena"],
-      ["まで", "sampai"],
-      ["と", "dan"],
-      ["もしもし", "halo"],
-      ["これ", "ini"],
-      ["それ", "itu"],
-      ["あれ", "itu"],
-      ["どれ", "yang mana"],
-      ["またね", "sampai jumpa"],
-      ["じゃあね", "sampai nanti"],
-      ["では、また", "sampai jumpa"],
-      ["またね", "sampai jumpa"],
-      ["おげんきですか", "apa kabar"],
-      ["はい、げんきです", "saya baik"],
-      ["いってきます", "saya pergi"],
-      ["いってらっしゃい", "hati-hati"],
-      ["ただいま", "saya pulang"],
-      ["おかえりなさい", "selamat datang"],
-      ["いただきます", "selamat makan"],
-      ["ごちそうさまでした", "terima kasih"],
-      ["あたたかい", "hangat"],
-      ["あたま", "kepala"],
-      ["あたらし", "baru"],
-      ["あちら", "sana"],
-      ["あつい", "panas"],
-      ["あっち", "disana"],
-      ["あと", "setelah itu"],
-      ["アパート", "apartemen"],
-      ["あびる", "mandi"],
-      ["あぶない", "berbahaya"],
-      ["あまい", "manis"],
-      ["あまり", "tidak terlalu"],
-      ["あめ", "hujan"],
-      ["あめ", "permen"],
-      ["あらう", "mencuci"],
-      ["ある", "ada"],
-      ["あるく", "berjalan"],
-      ["いい", "iya"],
-      ["よい", "iya"],
-      ["いう", "mengatakan"],
-      ["いえ", "rumah"],
-      ["いかが", "bagaimana"],
-      ["いく", "pergi"],
-      ["いくつ", "berapa umur"],
-      ["いくら", "berapa banyak"],
-      ["いけ", "kolam"],
-      ["いしゃ", "dokter"],
-      ["いそがしい", "sibuk"],
-      ["いたい", "menyakiti"],
-      ["いちにち", "satu hari"],
-      ["いちばん", "terbaik"],
-      ["いつ", "kapan"],
-      ["いつか", "lima hari"],
-      ["いっしょ", "bersama"],
-      ["いつつ", "lima"],
-      ["いつも", "selalu"],
-      ["いぬ", "anjing"],
-      ["いま", "sekarang"],
-      ["いみ", "arti"],
-      ["いもうと", "adik"],
-      ["いや", "tidak"],
-      ["いりぐち", "jalan masuk"],
-      ["いる", "ada"],
-      ["いる", "membutuhkan"],
-      ["いれる", "memasukan"],
-      ["いろ", "warna"],
-      ["いろいろ", "berbagai macam"],
-      ["うえ", "diatas"],
-      ["うしろ", "dibelakang"],
-      ["うすい", "kurus"],
-      ["うた", "lagu"],
-      ["うたう", "menyanyikan"],
-      ["うまれる", "terlahir"],
-      ["うみ", "laut"],
-      ["うる", "menjual"],
-      ["うるさい", "berisik"],
-      ["うわぎ", "jaket"],
-      ["え", "gambar"],
-      ["えいが", "film"],
-      ["えいがかん", "bioskop"],
-      ["えいご", "bahasa inggris"],
-      ["ええ", "iya"],
-      ["えき", "stasiun"],
-      ["エレベーター", "lift"],
-      ["おいしい", "lezat"],
-      ["おおい", "banyak"],
-      ["おおきい", "besar"],
-      ["おおきな", "besar"],
-      ["おおぜい", "banyak orang"],
-      ["おかあさん", "ibu"],
-      ["おかし", "permen"],
-      ["おきる", "bangun"],
-      ["おく", "menaruh"],
-      ["おくさん", "istri"],
-      ["おさけ", "sake"],
-      ["おさら", "piring"],
-      ["おじいさん", "kakek"],
-      ["おしえる", "mengajar"],
-      ["おじさん", "paman"],
-      ["おす", "mendorong"],
-      ["おそい", "terlambat"],
-      ["おてあらい", "kamar mandi"],
-      ["おとうさん", "ayah"],
-      ["おとこ", "laki-laki"],
-      ["おとこのこ", "anak laki-laki"],
-      ["おととい", "kemarin dulu"],
-      ["おととし", "dua tahun lalu"],
-      ["おとな", "dewasa"],
-      ["おなか", "perut"],
-      ["おなじ", "sama"],
-      ["おにいさん", "kakak"],
-      ["おねえさん", "kakak"],
-      ["おばあさん", "nenek"],
-      ["おばさん", "bibi"],
-      ["おふろ", "mandi"],
-      ["おべんとう", "kotak makan siang"]
+  ["おおきい", "besar"],
+  ["ちいさい", "kecil"],
+  ["ながい", "panjang"],
+  ["みじかい", "pendek"],
+  ["おおい", "banyak"],
+  ["すくない", "sedikit"],
+  ["ふとい", "gemuk, tebal"],
+  ["ほそい", "ramping, tipis"],
+  ["あつい", "tebal"],
+  ["うすい", "tipis"],
+  ["かたい", "keras"],
+  ["やわらかい", "lunak"],
+  ["こまかい", "kecil(uang)"],
+  ["あらい", "kasar"],
+  ["あたらしい", "baru"],
+  ["ふるい", "lama, tua"],
+  ["たかい", "mahal, tinggi"],
+  ["やすい", "murah"],
+  ["はやい", "cepat (waktu)"],
+  ["はやい", "cepat (kelajuan)"],
+  ["おそい", "lambat"],
+  ["とおい", "jauh"],
+  ["ちかい", "dekat"],
+  ["つよい", "kuat"],
+  ["よわい", "lemah"],
+  ["たかい", "tinggi, mahal"],
+  ["ひくい", "rendah"],
+  ["あつい", "panas (benda spt mknan dll"],
+  ["つめたい", "dingin (benda spt mknan dll)"],
+  ["あたたかい", "hangat (benda spt mknan dll)"],
+  ["ぬるい", "kurang panas(air)"],
+  ["まるい", "bundar, bulat"],
+  ["あまい", "manis"],
+  ["からい", "pedas"],
+  ["すっぱい", "asam"],
+  ["しおからい", "asin"],
+  ["にがい", "pahit"],
+  ["こい", "pekat"],
+  ["うすい", "tipis, encer(rasanya)"],
+  ["おいしい", "enak"],
+  ["まずい", "tidak enak"],
+  ["あつい", "panas(suhu)"],
+  ["さむい", "dingin(suhu)"],
+  ["あたたかい", "hangat(suhu)"],
+  ["すずしい", "sejuk(suhu)"],
+  ["むしあつい", "panas gerah(suhu)"],
+  ["あかるい", "terang, riang"],
+  ["くらい", "gelap, suram"],
+  ["きたない", "kotor"],
+  ["おもい", "berat"],
+  ["かるい", "ringan"],
+  ["くわしい", "detail"],
+  ["むずかしい", "sulit"],
+  ["やさしい", "mudah, baik hati"],
+  ["めずらしい", "langka"],
+  ["おかしい", "aneh, lucu"],
+  ["あぶない", "berbahaya"],
+  ["うまい", "enak, pandai"],
+  ["いい", "bagus"],
+  ["わるい", "jelek"],
+  ["ひどい", "kejam"],
+  ["うるさい", "berisik"],
+  ["いそがしい", "sibuk"],
+  ["ただしい", "benar"],
+  ["すごい", "hebat"],
+  ["すばらしい", "luar biasa"],
+  ["かっこいい", "keren, terlihat bagus"],
+  ["えらい", "pintar, hebat"],
+  ["なか が いい", "rukun, akrab (kalimat)"],
+  ["したしい", "akrab"],
+  ["やさしい", "baik hati, ramah"],
+  ["かわいい", "cantik, lucu, imut"],
+  ["うつくしい", "indah"],
+  ["きびしい", "tegas"],
+  ["おとなしい", "bersifat lemah lembut,tdk keras"],
+  ["たのしい", "menyenangkan"],
+  ["おもしろい", "menarik, lucu"],
+  ["つまらない", "membosankan, tdk menarik"],
+  ["うれしい", "senang, gembira"],
+  ["さびしい", "merasa sepi"],
+  ["こわい", "takut"],
+  ["かなしい", "sedih"],
+  ["はずかしい", "malu"],
+  ["うらやましい", "iri hati"],
+  ["なつかしい", "terkenang, melepaskan rindu"],
+  ["ねむい", "mengantuk"],
+  ["いたい", "merasa nyeri, sakit"],
+  ["ほしい", "ingin mendapatkan"],
+  ["ない", "tidak ada"],
+  ["ざんねん", "menyayangkan"],
+  ["しんぱい", "khawatir"],
+  ["ふあん", "cemas"],
+  ["すき", "suka"],
+  ["きらい", "tidak suka, benci"],
+  ["だいすき", "suka sekali"],
+  ["だいきらい", "benci sekali"],
+  ["きれえ", "cantik, bersih"],
+  ["にぎやか", "ramai"],
+  ["しずか", "tenang"],
+  ["ふくざつ", "rumit"],
+  ["かんたん", "mudah"],
+  ["べんり", "praktis"],
+  ["ふべん", "tidak praktis"],
+  ["しあわせ", "bahagia"],
+  ["すてき", "bagus(dan terpesona)"],
+  ["ゆうめえ", "terkenal"],
+  ["あんぜん", "aman"],
+  ["きけん", "berbahaya"],
+  ["いろいろ", "bermacam"],
+  ["だいじょうぶ", "tidak apa apa"],
+  ["だいじ", "penting"],
+  ["たいせつ", "penting"],
+  ["だめ", "tidak boleh, situasinya"],
+  ["へん", "aneh"],
+  ["むだ", "sia-sia"],
+  ["きゅう", "mendadak"],
+  ["じょうず", "pandai"],
+  ["へた", "tidak pandai"],
+  ["とくい", "pandai, jago"],
+  ["にがて", "tdk begitu suka,tdk jago"],
+  ["ひま", "senggang"],
+  ["かわいそう", "kasihan"],
+  ["りっぱ", "megah, layak dihormati"],
+  ["たいへん", "berat(peristiwa)"],
+  ["らく", "enteng, mudah"],
+  ["むり", "mustahil"],
+  ["おしゃれ", "modis"],
+  ["ていねえ", "sopan, halus, ramah, teliti"],
+  ["しんせつ", "baik hati, ramah"],
+  ["ハンサム", "ganteng"],
+  ["まじめ", "rajin, serius, jujur"],
+  ["ふまじめ", "tidak serius, tidak jujur"],
+  ["いや", "tidak suka / benci"],
+  ["いっしょうけんめい", "sungguh-sungguh"],
+  ["さかん", "popular"],
+  ["じゃま", "mengganggu"],
+  ["じゅうぶん", "cukup"],
+  ["じょうぶ", "kuat"],
+  ["てきとう", "tepat, yg sesuai"],
+  ["とくべつ", "khusus, spesial"],
+  ["じゆう", "bebas"],
+  ["まっすぐ", "lurus"],
+  ["ねっしん", "dng sungguh hati, dng rajin"],
+  ["ひつよう", "perlu"],
+  ["べつ", "lain, beda"],
+  ["ふしぎ", "ajaib"],
+  ["ごうか", "mewah"],
+  ["おなじ", "sama"],
+  ["でんとうてき", "tradisional"],
+  ["かっぱつ", "aktif"],
+  ["せいじつ", "tulus hati, setia"],
+  ["わがまま", "bersifat egois"],
+  ["がんこ", "keras kepala"],
+  ["すなお", "patuh, polos"],
+  ["じわる", "bersifat tega, jahat"],
+  ["かちき", "tidak mau kalah"],
+  ["しんけえしつ", "bersifat sensitif, khawatir berlebihan"]
     ];
 
     let questions = [], current = 0, score = 0;
