--- a/menukosakata.html
+++ b/menukosakata.html
@@ -235,6 +235,13 @@
         <div class="menu-description">Persiapan JLPT N5 dengan daftar kosakata yang sering diujikan</div>
         <a href="n5kosakata.html" class="btn">Mulai Belajar</a>
       </div>
+      
+      <div class="menu-item" onclick="location.href='kosakataxpress.html'">
+        <div class="menu-icon">📘</div>
+        <div class="menu-title">Kosakata Xpress</div>
+        <div class="menu-description">Persiapan Tes Kemampuan Akademik dengan daftar kosakata</div>
+        <a href="n5kosakata.html" class="btn">Mulai Belajar</a>
+      </div>
     </div>
 
     <a href="index.html" class="back-btn">← Kembali ke Halaman Utama</a>
