--- a/menutatabahasa.html
+++ b/menutatabahasa.html
@@ -234,7 +234,7 @@
         <a href="katasifat.html" class="btn">Mulai Kuis</a>
       </div>
 
-      <div class="menu-item" onclick="location.href='kanjikunyomi.html'">
+      <div class="menu-item" onclick="location.href='katakerja.html'">
         <div class="menu-icon">📔</div>
         <div class="menu-title">Kuis Kata Kerja</div>
         <div class="menu-description">Pelajari dan uji pemahaman tentang variasi Kata Kerja dasar</div>
